--- a/src/assets/scss/custom/_content.scss
+++ b/src/assets/scss/custom/_content.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 .main-content {
     position: relative;
 
@@ -16,8 +18,8 @@
     // Container
     .container-fluid {
         @include media-breakpoint-up(md) {
-            padding-left: ($main-content-padding-x + $grid-gutter-width / 2) !important;
-            padding-right: ($main-content-padding-x + $grid-gutter-width / 2) !important;
+            padding-left: ($main-content-padding-x + math.div($grid-gutter-width, 2)) !important;
+            padding-right: ($main-content-padding-x + math.div($grid-gutter-width, 2)) !important;
         }
     }
 }
