--- a/src/assets/scss/custom/_variables.scss
+++ b/src/assets/scss/custom/_variables.scss
@@ -1,30 +1,4 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@use "sass:math";
 
 //
 // Variables
@@ -374,7 +348,7 @@ $h5-font-size:                $font-size-base * .8125 !default;
 $h6-font-size:                $font-size-base * .625 !default;
 
 
-$headings-margin-bottom:      ($spacer / 2);
+$headings-margin-bottom:       math.div($spacer, 2);
 $headings-font-family:        inherit !default;
 $headings-font-weight:        $font-weight-bold !default;
 $headings-line-height:        1.5 !default;
