--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -5,7 +5,7 @@
   <div class="container-fluid d-flex align-items-center">
     <div class="row">
       <div class="col-lg-7 col-md-10">
-        <h1 class="display-2 text-white">Bonjour [Admin.firstName]</h1>
+        <h1 class="display-2 text-white">Bonjour Oguzhan</h1>
         <p class="text-white mt-0 mb-5">Vous pouvez vérifier et modifier vos informations sur cette page</p>
       </div>
     </div>
@@ -19,11 +19,6 @@
           <div class="row align-items-center">
             <div class="col-8">
               <h3 class="mb-0">My account</h3>
-            </div>
-            <div class="col-4 text-right">
-              <a href="#!" class="btn btn-sm btn-primary">Settings</a>
-            </div>
-          </div>
         </div>
         <div class="card-body">
           <form>
@@ -33,7 +28,7 @@
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-email">Email address</label>
-                    <input type="email" id="input-email" class="form-control form-control-alternative" placeholder="[Admin.email]">
+                    <input type="email" id="input-email" class="form-control form-control-alternative" placeholder="prenom.nom@mail.com" value="oguzhan.kilic@epsi.fr">
                   </div>
                 </div>
               </div>
@@ -41,13 +36,13 @@
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-first-name">First name</label>
-                    <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="First name" value="[Admin.prénom]">
+                    <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="First name" value="Oguzhan">
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-last-name">Last name</label>
-                    <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Last name" value="[Admin.nom]">
+                    <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Last name" value="Kilic">
                   </div>
                 </div>
               </div>
