--- a/src/app/pages/maps/maps.component.html
+++ b/src/app/pages/maps/maps.component.html
@@ -1,93 +1,6 @@
 <div class="header bg-gradient-danger pb-8 pt-5 pt-md-8">
   <div class="container-fluid">
     <div class="header-body">
-      <!-- Card stats -->
-      <div class="row">
-        <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Traffic</h5>
-                  <span class="h2 font-weight-bold mb-0">350,897</span>
-                </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
-                    <i class="fas fa-chart-bar"></i>
-                  </div>
-                </div>
-              </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                <span class="text-nowrap">Since last month</span>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">New users</h5>
-                  <span class="h2 font-weight-bold mb-0">2,356</span>
-                </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
-                    <i class="fas fa-chart-pie"></i>
-                  </div>
-                </div>
-              </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-danger mr-2"><i class="fas fa-arrow-down"></i> 3.48%</span>
-                <span class="text-nowrap">Since last week</span>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Sales</h5>
-                  <span class="h2 font-weight-bold mb-0">924</span>
-                </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
-                    <i class="fas fa-users"></i>
-                  </div>
-                </div>
-              </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-warning mr-2"><i class="fas fa-arrow-down"></i> 1.10%</span>
-                <span class="text-nowrap">Since yesterday</span>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
-                  <span class="h2 font-weight-bold mb-0">49,65%</span>
-                </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-info text-white rounded-circle shadow">
-                    <i class="fas fa-percent"></i>
-                  </div>
-                </div>
-              </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-success mr-2"><i class="fas fa-arrow-up"></i> 12%</span>
-                <span class="text-nowrap">Since last month</span>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </div>
@@ -95,9 +8,173 @@
 <div class="container-fluid mt--7">
   <div class="row">
     <div class="col">
-      <div class="card shadow border-0">
-        <div id="map-canvas" class="map-canvas" data-lat="40.748817" data-lng="-73.985428" style="height: 600px;"></div>
-      </div>
+      <!-- Questions form-->
+      <form>
+        <!-- Question Block 0-->
+        <div class="col-md-6">
+          <div style="width: 64rem;">
+            <div class="card card-stats mb-4 mb-lg-0">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <span class="h2 font-weight-bold mb-0">Est-ce que cette période en Entreprise s’est bien passée ?</span>
+                    <br>
+                    <br>
+                  </div>
+                </div>
+                <div class="custom-control custom-radio mb-3">
+                  <input name="custom-radio-2" class="custom-control-input" id="customRadio0" type="radio">
+                  <label class="custom-control-label" for="customRadio0">Oui</label>
+                </div>
+                <div class="custom-control custom-radio mb-3">
+                  <input name="custom-radio-2" class="custom-control-input" id="customRadio01" type="radio">
+                  <label class="custom-control-label" for="customRadio01">No</label>
+                </div>
+                <div class="custom-control custom-radio mb-3">
+                  <input name="custom-radio-2" class="custom-control-input" id="customRadio02" type="radio">
+                  <label class="custom-control-label" for="customRadio02">Je ne préfère pas répondre</label>
+                </div>
+              </div>
+            </div>
+        </div>
+        </div>
+        <!-- Question Block 1-->
+        <div class="col-md-6">
+          <div style="width: 64rem;">
+            <div class="card card-stats mb-4 mb-lg-0">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <span class="h2 font-weight-bold mb-0">Vous sentez-vous surchargé par votre travail ?</span>
+                    <br>
+                    <br>
+                  </div>
+                </div>
+                <div class="custom-control custom-radio mb-3">
+                  <input name="custom-radio-2" class="custom-control-input" id="customRadio11" type="radio">
+                  <label class="custom-control-label" for="customRadio11">Oui</label>
+                </div>
+                <div class="custom-control custom-radio mb-3">
+                  <input name="custom-radio-2" class="custom-control-input" id="customRadio12" type="radio">
+                  <label class="custom-control-label" for="customRadio12">Non</label>
+                </div>
+                <div class="custom-control custom-radio mb-3">
+                  <input name="custom-radio-2" class="custom-control-input" id="customRadio13" type="radio">
+                  <label class="custom-control-label" for="customRadio13">Je ne préfère pas répondre</label>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Question Block 2-->
+        <div class="col-md-6">
+          <div style="width: 64rem;">
+            <div class="card card-stats mb-4 mb-lg-0">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <span class="h2 font-weight-bold mb-0">Aimez-vous les activités physiques ?</span>
+                    <br>
+                    <br>
+                  </div>
+                </div>
+                <div class="custom-control custom-radio mb-3">
+                  <input name="custom-radio-2" class="custom-control-input" id="customRadio22" type="radio">
+                  <label class="custom-control-label" for="customRadio22">Oui</label>
+                </div>
+                <div class="custom-control custom-radio mb-3">
+                  <input name="custom-radio-2" class="custom-control-input" id="customRadio23" type="radio">
+                  <label class="custom-control-label" for="customRadio23">Non</label>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Question Block 3-->
+        <div class="col-md-6">
+          <div style="width: 64rem;">
+            <div class="card card-stats mb-4 mb-lg-0">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <span class="h2 font-weight-bold mb-0">Voulez-vous effectuer cette activité dans les bureaux ou à l'exterieur ?</span>
+                    <br>
+                    <br>
+                  </div>
+                </div>
+                <div class="custom-control custom-radio mb-3">
+                  <input name="custom-radio-2" class="custom-control-input" id="customRadio31" type="radio">
+                  <label class="custom-control-label" for="customRadio31">Dans les bureaux</label>
+                </div>
+                <div class="custom-control custom-radio mb-3">
+                  <input name="custom-radio-2" class="custom-control-input" id="customRadio32" type="radio">
+                  <label class="custom-control-label" for="customRadio32">A l'exterieur</label>
+                </div>
+                <div class="custom-control custom-radio mb-3">
+                  <input name="custom-radio-2" class="custom-control-input" id="customRadio33" type="radio">
+                  <label class="custom-control-label" for="customRadio33">Peu importe</label>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Question Block 4-->
+        <div class="col-md-6">
+          <div style="width: 64rem;">
+            <div class="card card-stats mb-4 mb-lg-0">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <span class="h2 font-weight-bold mb-0">Voulez-vous effectuer cette activité en dehors des heures de travail ?</span>
+                    <br>
+                    <br>
+                  </div>
+                </div>
+                <div class="custom-control custom-radio mb-3">
+                  <input name="custom-radio-2" class="custom-control-input" id="customRadio41" type="radio">
+                  <label class="custom-control-label" for="customRadio41">Oui</label>
+                </div>
+                <div class="custom-control custom-radio mb-3">
+                  <input name="custom-radio-2" class="custom-control-input" id="customRadio42" type="radio">
+                  <label class="custom-control-label" for="customRadio42">Non</label>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Question Block 5-->
+        <div class="col-md-6">
+          <div style="width: 64rem;">
+            <div class="card card-stats mb-4 mb-lg-0">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <span class="h2 font-weight-bold mb-0">Pour combien de temps au maximum voulez-vous effectuer cette activité ?</span>
+                    <br>
+                    <br>
+                  </div>
+                </div>
+                <div class="custom-control custom-radio mb-3">
+                  <input name="custom-radio-2" class="custom-control-input" id="customRadio51" type="radio">
+                  <label class="custom-control-label" for="customRadio51">Quelque heures</label>
+                </div>
+                <div class="custom-control custom-radio mb-3">
+                  <input name="custom-radio-2" class="custom-control-input" id="customRadio52" type="radio">
+                  <label class="custom-control-label" for="customRadio52">Une demi-journée</label>
+                </div>
+                <div class="custom-control custom-radio mb-3">
+                  <input name="custom-radio-2" class="custom-control-input" id="customRadio53" type="radio">
+                  <label class="custom-control-label" for="customRadio53">Une journée</label>
+                </div>
+                <div class="custom-control custom-radio mb-3">
+                  <input name="custom-radio-2" class="custom-control-input" id="customRadio54" type="radio">
+                  <label class="custom-control-label" for="customRadio54">Plusieurs journées</label>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
 </div>
