Added submit button

--- a/src/app/pages/maps/maps.component.html
+++ b/src/app/pages/maps/maps.component.html
@@ -23,15 +23,15 @@
                   </div>
                 </div>
                 <div class="custom-control custom-radio mb-3">
-                  <input name="custom-radio-2" class="custom-control-input" id="customRadio0" type="radio">
+                  <input name="custom-radio-1" class="custom-control-input" id="customRadio0" type="radio">
                   <label class="custom-control-label" for="customRadio0">Oui</label>
                 </div>
                 <div class="custom-control custom-radio mb-3">
-                  <input name="custom-radio-2" class="custom-control-input" id="customRadio01" type="radio">
+                  <input name="custom-radio-1" class="custom-control-input" id="customRadio01" type="radio">
                   <label class="custom-control-label" for="customRadio01">No</label>
                 </div>
                 <div class="custom-control custom-radio mb-3">
-                  <input name="custom-radio-2" class="custom-control-input" id="customRadio02" type="radio">
+                  <input name="custom-radio-1" class="custom-control-input" id="customRadio02" type="radio">
                   <label class="custom-control-label" for="customRadio02">Je ne préfère pas répondre</label>
                 </div>
               </div>
@@ -79,11 +79,11 @@
                   </div>
                 </div>
                 <div class="custom-control custom-radio mb-3">
-                  <input name="custom-radio-2" class="custom-control-input" id="customRadio22" type="radio">
+                  <input name="custom-radio-3" class="custom-control-input" id="customRadio22" type="radio">
                   <label class="custom-control-label" for="customRadio22">Oui</label>
                 </div>
                 <div class="custom-control custom-radio mb-3">
-                  <input name="custom-radio-2" class="custom-control-input" id="customRadio23" type="radio">
+                  <input name="custom-radio-3" class="custom-control-input" id="customRadio23" type="radio">
                   <label class="custom-control-label" for="customRadio23">Non</label>
                 </div>
               </div>
@@ -103,15 +103,15 @@
                   </div>
                 </div>
                 <div class="custom-control custom-radio mb-3">
-                  <input name="custom-radio-2" class="custom-control-input" id="customRadio31" type="radio">
+                  <input name="custom-radio-4" class="custom-control-input" id="customRadio31" type="radio">
                   <label class="custom-control-label" for="customRadio31">Dans les bureaux</label>
                 </div>
                 <div class="custom-control custom-radio mb-3">
-                  <input name="custom-radio-2" class="custom-control-input" id="customRadio32" type="radio">
+                  <input name="custom-radio-4" class="custom-control-input" id="customRadio32" type="radio">
                   <label class="custom-control-label" for="customRadio32">A l'exterieur</label>
                 </div>
                 <div class="custom-control custom-radio mb-3">
-                  <input name="custom-radio-2" class="custom-control-input" id="customRadio33" type="radio">
+                  <input name="custom-radio-4" class="custom-control-input" id="customRadio33" type="radio">
                   <label class="custom-control-label" for="customRadio33">Peu importe</label>
                 </div>
               </div>
@@ -131,11 +131,11 @@
                   </div>
                 </div>
                 <div class="custom-control custom-radio mb-3">
-                  <input name="custom-radio-2" class="custom-control-input" id="customRadio41" type="radio">
+                  <input name="custom-radio-5" class="custom-control-input" id="customRadio41" type="radio">
                   <label class="custom-control-label" for="customRadio41">Oui</label>
                 </div>
                 <div class="custom-control custom-radio mb-3">
-                  <input name="custom-radio-2" class="custom-control-input" id="customRadio42" type="radio">
+                  <input name="custom-radio-5" class="custom-control-input" id="customRadio42" type="radio">
                   <label class="custom-control-label" for="customRadio42">Non</label>
                 </div>
               </div>
@@ -155,24 +155,28 @@
                   </div>
                 </div>
                 <div class="custom-control custom-radio mb-3">
-                  <input name="custom-radio-2" class="custom-control-input" id="customRadio51" type="radio">
+                  <input name="custom-radio-6" class="custom-control-input" id="customRadio51" type="radio">
                   <label class="custom-control-label" for="customRadio51">Quelque heures</label>
                 </div>
                 <div class="custom-control custom-radio mb-3">
-                  <input name="custom-radio-2" class="custom-control-input" id="customRadio52" type="radio">
+                  <input name="custom-radio-6" class="custom-control-input" id="customRadio52" type="radio">
                   <label class="custom-control-label" for="customRadio52">Une demi-journée</label>
                 </div>
                 <div class="custom-control custom-radio mb-3">
-                  <input name="custom-radio-2" class="custom-control-input" id="customRadio53" type="radio">
+                  <input name="custom-radio-6" class="custom-control-input" id="customRadio53" type="radio">
                   <label class="custom-control-label" for="customRadio53">Une journée</label>
                 </div>
                 <div class="custom-control custom-radio mb-3">
-                  <input name="custom-radio-2" class="custom-control-input" id="customRadio54" type="radio">
+                  <input name="custom-radio-6" class="custom-control-input" id="customRadio54" type="radio">
                   <label class="custom-control-label" for="customRadio54">Plusieurs journées</label>
                 </div>
               </div>
             </div>
           </div>
+        </div>
+        <!-- Submit button -->
+        <div class="col-md-12 text-center">
+          <button type="button" class="btn btn-primary btn-lg">Envoyer les questions</button>
         </div>
       </form>
     </div>
