Centered the quizz

--- a/src/app/pages/maps/maps.component.html
+++ b/src/app/pages/maps/maps.component.html
@@ -5,7 +5,7 @@
   </div>
 </div>
 <!-- Page content -->
-<div class="container-fluid mt--7">
+<div class="container-fluid mt--7 d-flex justify-content-center">
   <div class="row">
     <div class="col">
       <!-- Questions form-->
