Post email address to the back

--- a/src/app/pages/tables/tables.component.html
+++ b/src/app/pages/tables/tables.component.html
@@ -10,8 +10,13 @@
   <div class="row">
     <div class="col">
       <div class="card shadow">
+        <form>
         <div class="card-header border-0">
           <h3 class="mb-0">Card tables</h3>
+          <!-- Send Mail button -->
+          <div class="col-md-12 text-right">
+            <button class="btn btn-primary" type="button" (click)="submit()">Envoyer le Quizz</button>
+          </div>
         </div>
         <div class="table-responsive">
           <table class="table align-items-center table-flush">
@@ -27,7 +32,7 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox mb-3">
-                    <input class="custom-control-input" id="customCheck1" type="checkbox" (click)="postMail('henri.spaulding@epsi.fr')">
+                    <input class="custom-control-input" id="customCheck1" type="checkbox" (change)="onCheck('henri.spaulding@epsi.fr')">
                     <label class="custom-control-label" for="customCheck1">henri.spaulding@epsi.fr</label>
                   </div>
                 </td>
@@ -53,7 +58,7 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox mb-3">
-                    <input class="custom-control-input" id="customCheck2" type="checkbox">
+                    <input class="custom-control-input" id="customCheck2" type="checkbox" (change)="onCheck('thibault.lepoivre@epsi.fr')">
                     <label class="custom-control-label" for="customCheck2">thibault.lepoivre@epsi.fr</label>
                   </div>
                 </td>
@@ -79,7 +84,7 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox mb-3">
-                    <input class="custom-control-input" id="customCheck3" type="checkbox">
+                    <input class="custom-control-input" id="customCheck3" type="checkbox" (change)="onCheck('tanina.debussy@epsi.fr')">
                     <label class="custom-control-label" for="customCheck3">tanina.debussy@epsi.fr</label>
                   </div>
                 </td>
@@ -105,7 +110,7 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox mb-3">
-                    <input class="custom-control-input" id="customCheck4" type="checkbox">
+                    <input class="custom-control-input" id="customCheck4" type="checkbox" (change)="onCheck('richard.tamlberg@epsi.fr')">
                     <label class="custom-control-label" for="customCheck4">richard.tamlberg@epsi.fr</label>
                   </div>
                 </td>
@@ -131,7 +136,7 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox mb-3">
-                    <input class="custom-control-input" id="customCheck5" type="checkbox">
+                    <input class="custom-control-input" id="customCheck5" type="checkbox" (change)="onCheck('serge.debernard@epsi.fr')">
                     <label class="custom-control-label" for="customCheck5">serge.debernard@epsi.fr</label>
                   </div>
                 </td>
@@ -182,6 +187,7 @@
             </ul>
           </nav>
         </div>
+        </form>
       </div>
     </div>
   </div>
