Added mail sending by ensding to api

--- a/src/app/pages/tables/tables.component.html
+++ b/src/app/pages/tables/tables.component.html
@@ -32,15 +32,15 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox mb-3">
-                    <input class="custom-control-input" id="customCheck1" type="checkbox" (change)="onCheck('henri.spaulding@epsi.fr')">
-                    <label class="custom-control-label" for="customCheck1">henri.spaulding@epsi.fr</label>
+                    <input class="custom-control-input" id="customCheck1" type="checkbox" (change)="onCheck('oguzhan.kilic@epsi.fr')">
+                    <label class="custom-control-label" for="customCheck1">oguzhan.kilic@epsi.fr</label>
                   </div>
                 </td>
                 <td>
-                  Spaulding
+                  Oguzhan
                 </td>
                 <td>
-                  Henri
+                  Kilic
                 </td>
                 <td class="text-right">
                   <div ngbDropdown placement="bottom-right">
@@ -84,15 +84,15 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox mb-3">
-                    <input class="custom-control-input" id="customCheck3" type="checkbox" (change)="onCheck('tanina.debussy@epsi.fr')">
-                    <label class="custom-control-label" for="customCheck3">tanina.debussy@epsi.fr</label>
+                    <input class="custom-control-input" id="customCheck3" type="checkbox" (change)="onCheck('henri.spaulding@epsi.fr')">
+                    <label class="custom-control-label" for="customCheck3">henri.spaulding@epsi.fr</label>
                   </div>
                 </td>
                 <td>
-                  Debussy
+                  Henri
                 </td>
                 <td>
-                  Tanina
+                  Spaulding
                 </td>
                 <td class="text-right">
                   <div ngbDropdown  placement="top-right">
@@ -110,15 +110,15 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox mb-3">
-                    <input class="custom-control-input" id="customCheck4" type="checkbox" (change)="onCheck('richard.tamlberg@epsi.fr')">
-                    <label class="custom-control-label" for="customCheck4">richard.tamlberg@epsi.fr</label>
+                    <input class="custom-control-input" id="customCheck4" type="checkbox" (change)="onCheck('chahinaz.haddad@epsi.fr')">
+                    <label class="custom-control-label" for="customCheck4">chahinaz.haddad@epsi.fr</label>
                   </div>
                 </td>
                 <td>
-                  Tamlberg
+                  Chahinaz
                 </td>
                 <td>
-                  Richard
+                  Haddad
                 </td>
                 <td class="text-right">
                   <div ngbDropdown   placement="top-right">
@@ -136,15 +136,15 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox mb-3">
-                    <input class="custom-control-input" id="customCheck5" type="checkbox" (change)="onCheck('serge.debernard@epsi.fr')">
-                    <label class="custom-control-label" for="customCheck5">serge.debernard@epsi.fr</label>
+                    <input class="custom-control-input" id="customCheck5" type="checkbox" (change)="onCheck('foussene.diabate@epsi.fr')">
+                    <label class="custom-control-label" for="customCheck5">foussene.diabate@epsi.fr</label>
                   </div>
                 </td>
                 <td>
-                  Debernard
+                  Foussene
                 </td>
                 <td>
-                  Serge
+                  Diabate
                 </td>
                 <td class="text-right">
                   <div ngbDropdown   placement="top-right">
