--- a/src/app/pages/client/edit-dialog-client.html
+++ b/src/app/pages/client/edit-dialog-client.html
@@ -15,7 +15,7 @@
         <input  class="form-control" [(ngModel)]="data.numTel" name="numTel" id="numTel">
       </div>
       <div class="form-group">
-        <label for="kilometrage">Kilometrage</label>
+        <label for="kilometrage">Addresse</label>
         <input  class="form-control" [(ngModel)]="data.address" name="address" id="address">
       </div>
 
