--- a/src/app/pages/camion/dialog-camion.html
+++ b/src/app/pages/camion/dialog-camion.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Ajouter un camion</h2>
+<h2 mat-dialog-title>Ajouter une camion</h2>
 
 <mat-dialog-content class="mat-typography">
 <form >
