--- a/src/app/pages/mission/dialog-mission.html
+++ b/src/app/pages/mission/dialog-mission.html
@@ -31,9 +31,26 @@
     <input  class="form-control" [(ngModel)]="data.prixTotale   " name="prixTotale   " id="prixTotale   ">
   </div>
   <div class="form-group">
+    <label for="camions">Camion</label>
+    <select  class="form-control" [(ngModel)]="data.camion" name="camions" id="camions">
+        <option value="null" selected>---</option>
+
+      <option *ngFor="let item of camions" [value]="jsonToStr(item)">{{item.immatriculation}}</option>
+      
+    </select>
+  </div> <div class="form-group">
+    <label for="chauffeurs">Chauffeur</label>
+    <select  class="form-control" [(ngModel)]="data.chauffeur"  name="chauffeurs" id="chauffeurs">
+        <option value="null" selected>---</option>
+
+      <option *ngFor="let item of chauffeurs" [value]="jsonToStr(item)">{{item.nom}}</option>
+      
+    </select>
+  </div>
+  <div class="form-group">
     <label for="clients">Client</label>
     <select  class="form-control" [(ngModel)]="data.client" name="clients" id="clients">
-       <option *ngFor="let item of clients" [value]="(item.id)">{{item.nom}}</option>
+       <option *ngFor="let item of clients" [value]="jsonToStr(item)">{{item.nom}}</option>
     </select>
   </div>
 
