commit before a pull

--- a/src/app/pages/mission/dialog-mission.html
+++ b/src/app/pages/mission/dialog-mission.html
@@ -33,8 +33,9 @@
   <div class="form-group">
     <label for="clients">Client</label>
     <select  class="form-control" [(ngModel)]="data.client" name="clients" id="clients">
-       <option *ngFor="let item of clients" [value]="(item.id)">{{item.nom}}</option>
-    </select>
+      <option value="null" selected>---</option>
+    <option *ngFor="let item of clients" [value]="jsonToStr(item)">{{item.nom}}</option>
+  </select>
   </div>
 
 
