--- a/src/app/pages/mission/mission.component.html
+++ b/src/app/pages/mission/mission.component.html
@@ -26,19 +26,23 @@
                         <tr>
                           <th scope="col">DateMission</th>
                           <th scope="col">Client</th>                
-
                           <th scope="col">Destination</th>
                           <th scope="col">Description</th>
                           <th scope="col">QTE</th>
                           <th scope="col">PrixHT</th>
                           <th scope="col">Pourcentage</th>
                           <th scope="col">PrixTotale</th>
+                          <th scope="col">Etat</th>
+
                         </tr>
                       </thead>
                       <tbody>
                         <tr *ngFor="let item of dataSource">
                           <td>
                             {{item.dateMission   | date:'shortDate'}}
+                          </td>
+                          <td>
+                            <div *ngIf="item.client"> {{item.client.nom}}</div>
                           </td>
                           <td>
                             {{item.destination }}
@@ -59,12 +63,14 @@
                             {{item.prixTotale   }}
                           </td>
                           <td>
-                            <div *ngIf="item.client"> {{item.client.nom}}</div>
-                          </td>
+                            {{item.etat}}
+                            </td>
+
                           <td class="text-right">
                             <a class="btn btn-primary btn-sm" (click)="openEditDialog(item.id, item.dateMission , item.destination,item.description,item.qte,item.prixHT,item.pourcentageTVA,item.prixTotale)"><i class="fas fa-edit"></i></a>
                             <a class="btn btn-danger btn-sm" (click)="supprimerMission(item.id)"><i class="fas fa-trash-alt" ></i></a>
                           </td>
+
                         </tr>
                      
                       </tbody>
