add register alll

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -31,7 +31,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                 </div>
-                <input class="form-control" [(ngModel)]="form.email" name="email" placeholder="Email" type="text">
+                <input class="form-control" [(ngModel)]="form.email" name="email" placeholder="Email" type="email">
               </div>
             </div>
             <div class="form-group">
