--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -44,7 +44,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                 </div>
-                <input class="form-control" placeholder="Name" type="text">
+                <input class="form-control" [(ngModel)]="form.username" name="username" placeholder="Name" type="text">
               </div>
             </div>
             <div class="form-group">
@@ -52,7 +52,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                 </div>
-                <input class="form-control" placeholder="Email" type="email">
+                <input class="form-control" placeholder="Email" [(ngModel)]="form.email" name="email" type="email">
               </div>
             </div>
             <div class="form-group">
@@ -60,7 +60,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                 </div>
-                <input class="form-control" placeholder="Password" type="password">
+                <input class="form-control" placeholder="Password"  [(ngModel)]="form.password" name="password" type="password">
               </div>
             </div>
             <div class="text-muted font-italic"><small>password strength: <span class="text-success font-weight-700">strong</span></small></div>
@@ -75,7 +75,7 @@
               </div>
             </div>
             <div class="text-center">
-              <button type="button" class="btn btn-primary mt-4">Create account</button>
+              <button type="button" (click)="onSubmit()" class="btn btn-primary mt-4">Create account</button>
             </div>
           </form>
         </div>
